--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+main{
+    min-height: 80vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1{
+    font-size: 1.8rem;
+    padding:1rem 0;
+}
+
+h2{
+    font-size: 1.4rem;
+    padding:0.5rem 0;
+}
+
+h3{
+padding: 1rem 0; 
+}
+
+.rating span{
+    margin: 0.1rem;
 }
